Add source images

--- a/Assignment_3/CMakeLists.txt
+++ b/Assignment_3/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Assignment_3 CUDA)
 
 set(CMAKE_CUDA_STANDARD 14)
 
-add_executable(Assignment_3 ex_1/exercise_1.cu)
+add_executable(Assignment_3 ex_1/hw3_ex1.cu)
 
 set_target_properties(Assignment_3 PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
