--- a/Assignment_3/CMakeLists.txt
+++ b/Assignment_3/CMakeLists.txt
@@ -3,7 +3,11 @@ project(Assignment_3 CUDA)
 
 set(CMAKE_CUDA_STANDARD 14)
 
-add_executable(Assignment_3 ex_1/hw3_ex1.cu)
+if (MSVC)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+endif ()
 
-set_target_properties(Assignment_3 PROPERTIES
+add_executable(exercise1 ex_1/hw3_ex1.cu)
+
+set_target_properties(exercise1 PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
