Create exercise 3 file

--- a/Assignment_3/CMakeLists.txt
+++ b/Assignment_3/CMakeLists.txt
@@ -8,6 +8,9 @@ if (MSVC)
 endif ()
 
 add_executable(exercise1 ex_1/hw3_ex1.cu)
+add_executable(exercise3 ex_3/hw3_ex3.cu)
 
 set_target_properties(exercise1 PROPERTIES
+        CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(exercise3 PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
