Implement first 2 exercises

--- a/Assignment_3/CMakeLists.txt
+++ b/Assignment_3/CMakeLists.txt
@@ -10,10 +10,13 @@ endif ()
 add_executable(exercise1 ex_1/hw3_ex1.cu)
 add_executable(exercise2 ex_2/exercise_2a.cu)
 add_executable(exercise3 ex_3/hw3_ex3.cu)
+add_executable(exercise_bonus ex_bonus/exercise_bonus.cu)
 
 set_target_properties(exercise1 PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(exercise2 PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(exercise3 PROPERTIES
+        CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(exercise_bonus PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
